# okto-pulse-core

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml  test_spec_validation_gate.py  test_validation_gate.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cla.yml
docs/: duplications_audit.md  e2e-0.1.13-sdlc-validation.md  e2e-0.1.14-sdlc-validation.md  kg-health.md
docs/architecture/: analytics_data_flow.md
docs/migrations/: v0.3.0.md
scripts/: fix_spec_ac_split.py  run_kg_tick_once.py
src/okto_pulse/core/: __init__.py  app.py
src/okto_pulse/core/api/: __init__.py  agents.py  analytics.py  architecture.py  attachments.py  boards.py  cards.py  comments.py  dead_letter.py  discovery.py  guidelines.py  ideations.py  kg_health.py  kg_routes.py  kg_tick.py  me.py  presets.py  qa.py  queue_health.py  refinements.py  router.py  settings.py  specs.py  sprints.py  traceability.py
src/okto_pulse/core/events/: README.md  __init__.py  bus.py  dispatcher.py  types.py
src/okto_pulse/core/events/handlers/: __init__.py  cancellation_decay.py  card_boost_recompute.py  cognitive_extraction.py  consolidation_enqueuer.py  kg_decay_tick.py  kg_hit_recompute.py
src/okto_pulse/core/infra/: __init__.py  auth.py  config.py  database.py  permissions.py  storage.py
src/okto_pulse/core/kg/: __init__.py  cache.py  cognitive_policy.py  commit_coordinator.py  connection_pool.py  cypher_templates.py  dedup_migration.py  embedding.py  governance.py  health.py  kg_service.py  primitives.py  reconciliation.py  scheduler_singleton.py  schema.py  schemas.py  scoring.py  search.py  session_manager.py  tier_power.py  tool_schemas.py  transaction.py
src/okto_pulse/core/kg/adaptive_hops/: __init__.py  factory.py  fixed.py  interfaces.py  iterative.py  llm.py  signal.py  utils.py
src/okto_pulse/core/kg/agent/: __init__.py
src/okto_pulse/core/kg/agent/extractors/: __init__.py  alternatives.py  assumptions.py  learnings.py
src/okto_pulse/core/kg/agent/heuristics/: __init__.py  contradiction.py  depends_on.py  llm_protocol.py  supersedence.py
src/okto_pulse/core/kg/context_compress/: __init__.py  compress.py
src/okto_pulse/core/kg/global_discovery/: __init__.py  clustering.py  outbox_worker.py  schema.py
src/okto_pulse/core/kg/grounding/: __init__.py  grounding.py
src/okto_pulse/core/kg/hybrid_search/: __init__.py  classifier.py  hybrid.py  intents.py  kuzu_adapter.py
src/okto_pulse/core/kg/interfaces/: __init__.py  audit_dtos.py  audit_repository.py  auth_context.py  cache_backend.py  cypher_executor.py  embedding.py  event_bus.py  graph_store.py  hop_planner.py  kg_config.py  query_rewriter.py  rate_limiter.py  registry.py  reranker.py  session_store.py
src/okto_pulse/core/kg/parent_doc/: __init__.py  parent_doc.py
src/okto_pulse/core/kg/providers/: __init__.py
src/okto_pulse/core/kg/query_rewrite/: __init__.py  decompose.py  factory.py  fusion.py  hyde.py  interfaces.py  noop.py  rrf.py
src/okto_pulse/core/kg/rerank/: __init__.py  cross_encoder.py  factory.py  interfaces.py  llm.py  noop.py  token_overlap.py
src/okto_pulse/core/kg/retrieve_critic/: __init__.py  interfaces.py  orchestrator.py
src/okto_pulse/core/kg/workers/: __init__.py  advisory_lock.py  cleanup.py  commit_events.py  consolidation.py  dead_letter.py  deterministic_worker.py  tech_entities.yml
src/okto_pulse/core/mcp/: __init__.py  agent_instructions.md  helpers.py  kg_power_tools.py  kg_query_tools.py  kg_tools.py  server.py  trace_middleware.py
src/okto_pulse/core/models/: __init__.py  db.py  schemas.py
src/okto_pulse/core/services/: __init__.py  analytics_service.py  architecture.py  dead_letter_inspector_service.py  discovery_executor.py  kg_health_service.py  main.py  queue_health_service.py  reference_resolution.py  settings_service.py  traceability.py
src/okto_pulse/tools/: __init__.py  kg_migrate_schema.py
tests/: conftest.py  test_agent_instructions_auto_copy.py  test_analytics_blockers.py  test_analytics_card_type.py  test_analytics_coverage.py  test_analytics_cycle_time_phase.py  test_analytics_service.py  test_analytics_velocity_daily.py  test_architecture_diagram_store.py  test_architecture_eager_loading.py  test_architecture_mcp.py  test_architecture_repository.py  test_architecture_rest.py  test_bug_regression_locked_spec.py  test_card_knowledge_mcp.py  test_card_knowledge_rest.py  test_card_lifecycle.py  test_commit_coordinator.py  test_consolidation_enqueuer_race.py  test_consolidation_queue_resilience_s1.py  test_consolidation_queue_resilience_s2.py  test_consolidation_queue_resilience_s3.py  test_delete_card_cascade.py  test_discovery_coverage_fr_fuzzy.py  test_discovery_intent_parity.py  test_dlq_inspector.py  test_e2e_commit_coordinator.py  test_events.py  test_extractor_assumptions.py  test_kg_adaptive_hops.py  test_kg_advisory_lock.py  test_kg_auth_e2e.py  test_kg_bootstrap_autoheal.py  test_kg_cognitive_extraction_handler.py  test_kg_cognitive_extraction_idempotency.py  test_kg_cognitive_extractors.py  test_kg_cognitive_heuristics.py  test_kg_cognitive_policy.py  test_kg_context_compress.py  test_kg_decision_history_semantic.py  (+65 more)
(+16 files in other folders)
