[project]
name = "okto-pulse-core"
version = "0.1.2"
description = "Okto Pulse Core — spec-driven project management engine with MCP support for AI agents"
requires-python = ">=3.11"
license = {text = "Elastic-2.0"}
authors = [
    {name = "Okto Labs", email = "dev@oktolabs.ai"},
]
keywords = ["kanban", "project-management", "mcp", "ai-agents", "spec-driven"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Office/Business :: Scheduling",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "aiofiles>=23.2.0,<26.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "asyncpg>=0.29,<1.0.0",
    "fastmcp>=2.0.0,<3.0.0",
    "mcp>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/OktoLabsAI/okto-pulse-core"
Documentation = "https://github.com/OktoLabsAI/okto-pulse-core#readme"
Repository = "https://github.com/OktoLabsAI/okto-pulse-core"
Issues = "https://github.com/OktoLabsAI/okto-pulse-core/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okto_pulse"]

[tool.hatch.build.targets.wheel.force-include]
"src/okto_pulse/core/mcp/agent_instructions.md" = "okto_pulse/core/mcp/agent_instructions.md"
