[project]
name = "okto-pulse-core"
version = "0.1.11"
description = "Okto Pulse Core — spec-driven project management engine with MCP support for AI agents"
requires-python = ">=3.11"
license = {text = "Elastic-2.0"}
authors = [
    {name = "Okto Labs", email = "dev@oktolabs.ai"},
]
keywords = ["kanban", "project-management", "mcp", "ai-agents", "spec-driven"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Office/Business :: Scheduling",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "wsproto>=1.2.0,<2.0.0",
    "pydantic>=2.5.0,<2.14",
    "pydantic-core>=2.14.0,<2.47",
    "pydantic-settings>=2.1.0,<3.0.0",
    "aiofiles>=23.2.0,<26.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "asyncpg>=0.29,<1.0.0",
    "fastmcp>=2.0.0,<3.0.0",
    "mcp>=1.0.0,<2.0.0",
    "ladybug>=0.16.0,<0.17.0",
    "numpy>=1.26.0,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "chardet>=3.0.2,<6.0.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
kg-embeddings = [
    "sentence-transformers>=2.5.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/OktoLabsAI/okto-pulse-core"
Documentation = "https://github.com/OktoLabsAI/okto-pulse-core#readme"
Repository = "https://github.com/OktoLabsAI/okto-pulse-core"
Issues = "https://github.com/OktoLabsAI/okto-pulse-core/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okto_pulse"]

[tool.hatch.build.targets.wheel.force-include]
"src/okto_pulse/core/mcp/agent_instructions.md" = "okto_pulse/core/mcp/agent_instructions.md"
"src/okto_pulse/core/kg/workers/tech_entities.yml" = "okto_pulse/core/kg/workers/tech_entities.yml"
"src/okto_pulse/core/kg/agent/prompts/cognitive_agent_v1.md" = "okto_pulse/core/kg/agent/prompts/cognitive_agent_v1.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Default async-fixture loop scope. With "session" all session-scoped fixtures
# (e.g. `_db_init`) run on the same loop the test functions use, eliminating
# the cross-file race where a function-scoped per-test loop tried to use
# objects created on a session-scoped one. This pairs with the conftest no
# longer overriding `event_loop` itself (deprecated in pytest-asyncio 1.x).
asyncio_default_fixture_loop_scope = "session"
# Default per-test timeout (seconds). Override per-test with @pytest.mark.timeout(N).
timeout = 120
# Timeout method: "thread" kills the test thread; "signal" kills the process.
# "thread" is safer for tests that use forked children; "signal" is more reliable.
timeout_method = "thread"
markers = [
    "e2e: end-to-end pipeline contract tests — slow, open Kùzu handles, exercise outbox worker; excluded by the fast unit run via `pytest -m 'not e2e'`",
    "timeout(seconds): override per-test timeout (default 120s)",
]
